# LabelQt

./: .clang-format  .gitignore  .gitmessage.txt  .gitmodules  AGENTS.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE.txt  README.md  THIRD_PARTY_NOTICES.md  TODO.md  preference.json
cmake/: Dependencies.cmake  DiffMatchPatch.cmake  Packaging.cmake  ProjectWarnings.cmake  SyncAutomationScripts.cmake
docs/: architecture.md  automation-scripting.md  code-walkthrough.md  devtools.md  porting-dependencies.md  proofreading-diff.md  release-checklist.md
resources/: README.md
resources/linux/: org.labelqt.LabelQt.desktop
scripts/: check_all.py  check_all.sh  check_fast.py  check_fast.sh  check_translations.py  check_translations.sh  devtool.py  package_windows_msi.py  package_windows_release.py  release_packaging.py
scripts/official/ai_translate/: configure_ai_translation.py  requirements.txt  script.json  translate.py
scripts/official/ocr_preview/: configure_ocr.py  ocr_preview.py  requirements.txt  script.json
scripts/official/sdk/: labelqt_automation.py
scripts/official/test/: delete_selected_labels.py  group_swap.py  nudge_selected_labels.py  realtime_log.py  requirements.txt  script.json  selected_text_stamp.py  wait_5s.py  word_count.py
src/: CMakeLists.txt  main.cpp
src/core/: AppPreferences.cpp  AppPreferences.h  ApplicationTheme.cpp  ApplicationTheme.h  CommandLineUtils.cpp  CommandLineUtils.h  Label.cpp  Label.h  LabelPlusDocument.cpp  LabelPlusDocument.h  Project.cpp  Project.h  ProjectMetadataService.cpp  ProjectMetadataService.h  RuntimePaths.cpp  RuntimePaths.h  TextDiffCleanupMode.h  TranslationManager.cpp  TranslationManager.h  UndoStack.cpp  UndoStack.h
src/services/: ArchiveReader.cpp  ArchiveReader.h  AutomationManifestParser.cpp  AutomationManifestParser.h  AutomationOperationApplier.cpp  AutomationOperationApplier.h  AutomationPythonResolver.cpp  AutomationPythonResolver.h  AutomationService.cpp  AutomationService.h  ImagePageCache.cpp  ImagePageCache.h  LabelClipboardService.cpp  LabelClipboardService.h  LabelEditController.cpp  LabelEditController.h  LabelNavigator.cpp  LabelNavigator.h  LabelPastePlanner.cpp  LabelPastePlanner.h  LabelSequenceDiffService.cpp  LabelSequenceDiffService.h  PageSourceInfoService.cpp  PageSourceInfoService.h  ProjectComparisonService.cpp  ProjectComparisonService.h  ProjectController.cpp  ProjectController.h  ProjectImageValidator.cpp  ProjectImageValidator.h  ProjectMergeService.cpp  ProjectMergeService.h  ProjectPageOrderService.cpp  ProjectPageOrderService.h  ProjectWorkflowController.cpp  ProjectWorkflowController.h  ProofreadReportService.cpp  ProofreadReportService.h  ReviewChangeClassifier.cpp  ReviewChangeClassifier.h  (+12 more)
src/ui/: AutomationController.cpp  AutomationController.h  AutomationParameterDialog.cpp  AutomationParameterDialog.h  AutomationRunDialog.cpp  AutomationRunDialog.h  AutomationShortcutController.cpp  AutomationShortcutController.h  AutomationShortcutEditorWidget.cpp  AutomationShortcutEditorWidget.h  CanvasLabelItems.cpp  CanvasLabelItems.h  CanvasLabelTextEditController.cpp  CanvasLabelTextEditController.h  CanvasLabelTextEditor.cpp  CanvasLabelTextEditor.h  CheckableFilterButton.cpp  CheckableFilterButton.h  CurrentPageLabelContext.cpp  CurrentPageLabelContext.h  DialogWindowUtils.cpp  DialogWindowUtils.h  EditorStateController.cpp  EditorStateController.h  GroupFilterComboBox.cpp  GroupFilterComboBox.h  GroupStyleEditorWidget.cpp  GroupStyleEditorWidget.h  ImageCanvas.cpp  ImageCanvas.h  ImagePageViewController.cpp  ImagePageViewController.h  LabelEditDelegates.cpp  LabelEditDelegates.h  LabelSelectionController.cpp  LabelSelectionController.h  LabelTableModel.cpp  LabelTableModel.h  LabelTableView.cpp  LabelTableView.h  (+25 more)
tests/: CMakeLists.txt  LabelTests.cpp  README.md
translations/: labelqt_en_US.ts  labelqt_ja_JP.ts  labelqt_zh_CN.ts  labelqt_zh_TW.ts
